# metalamp-web-app

./: CHANGELOG.md  README.md  fourmolu.yaml  metalamp-web-app.cabal  test.hs
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.0.2/: metalamp-web-app-0.0.0.0-inplace.conf  package.cache
dist-newstyle/packagedb/ghc-9.2.3/: metalamp-web-app-0.0.0.0-inplace.conf  package.cache
src/: App.hs
src/App/: Models.hs  Server.hs
