cabal-version:       2.4
name:                metalamp-web-app
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/uhbif19/metalamp-web-app
bug-reports:         https://github.com/uhbif19/metalamp-web-app/issues
license:             MIT
license-file:        LICENSE
author:              Gregory Gerasev
maintainer:          Gregory Gerasev <uhbif19@gmail.com>
copyright:           2022 Gregory Gerasev
category:            Web
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/uhbif19/metalamp-web-app.git

common common-options
  build-depends:       base

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     App

executable metalamp-web-app
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       metalamp-web-app
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite metalamp-web-app-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       metalamp-web-app
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
